<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.aag.eval_01.MainActivity"
    android:orientation="vertical"
    android:weightSum="1">

  <ImageView
      android:layout_width="match_parent"
      android:layout_height="65dp"
      android:layout_marginTop="10dp"
      app:srcCompat="@drawable/logo"
      android:id="@+id/imageView"
      android:layout_weight="0.31" />

  <TextView
      android:id="@+id/textView"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentTop="true"
      android:layout_centerHorizontal="true"
      android:layout_gravity="center"
      android:layout_marginTop="30dp"
      android:text="@string/title_log_in"
      android:textAppearance="@android:style/TextAppearance.Material.Large"
      android:textSize="30sp" />

  <EditText
      android:id="@+id/username"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:layout_below="@+id/textView"
      android:layout_centerHorizontal="true"
      android:layout_marginTop="10dp"
      android:ems="10"
      android:hint="@string/hint_username"
      android:inputType="textPersonName"
      />

  <EditText
      android:id="@+id/password"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:layout_alignLeft="@+id/username"
      android:layout_alignStart="@+id/username"
      android:layout_below="@+id/username"
      android:layout_marginTop="20dp"
      android:ems="10"
      android:hint="@string/hint_password"
      android:inputType="textPassword"
      />

  <Button
      android:id="@+id/btn_login"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:layout_below="@+id/password"
      android:layout_centerHorizontal="true"
      android:layout_marginTop="20dp"
      android:text="@string/title_log_in"
      />

  <TextView
      android:text="Gerardo Garcia | Alex Terrazas | Alex Herce"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:id="@+id/textView2"
      android:layout_gravity="center"
      android:layout_marginTop="50dp"
      android:textColor="@android:color/holo_orange_dark"
      android:textAlignment="center" />

</LinearLayout>
